# youtube_ai_system

./: .env.example  .gitignore  README.md  pyproject.toml
.abacusai/: config.json
app/: config.py  main.py  orchestrator.py
app/llm/: __init__.py  base.py  factory.py  json_utils.py  openai_client.py
app/modules/: base.py  brief.py  concept.py  feedback.py  kling.py  metadata.py  script.py  shot_planner_engine.py  storyboard.py  thumbnail.py  trend.py  video_prompt.py  voice.py
app/prompts/: module_prompts.py
app/prompts/templates/: concept_system.txt  concept_user.txt  script_system.txt  script_user.txt  shot_plan_system.txt  shot_plan_user.txt  storyboard_system.txt  storyboard_user.txt  trend_system.txt  trend_user.txt  video_prompt_system.txt  video_prompt_user.txt  voice_system.txt  voice_user.txt
app/schemas/: export_json_schemas.py  models.py
app/schemas/json/: channel_brief.schema.json  concept_batch.schema.json  concept_package.schema.json  final_package.schema.json  (+12 more)
app/utils/: __init__.py  artifact_store.py  io.py  json_tools.py  prompt_loader.py  validator.py
examples/: channel_brief.json
tests/: test_pipeline_e2e.py  test_prompt_loader.py  test_script.py  test_selector.py  test_shot_plan.py  test_storyboard.py  test_validator.py  test_video_prompt.py  test_voice.py
ui/: README.md
ui/backend/: main.py  pyproject.toml
ui/backend/api/: dependencies.py  pipeline.py  projects.py
ui/backend/schemas/: api_models.py
ui/backend/services/: project_store.py
ui/frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
(+11 files in other folders)
