[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-ai-system"
version = "0.1.0"
description = "Structured YouTube AI pipeline with prompts, schemas, and orchestration"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "openai>=2.31.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.setuptools]
packages = ["app", "app.llm", "app.modules", "app.prompts", "app.schemas", "app.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
