[project]
name = "youtube-ai-api"
version = "0.1.0"
description = "FastAPI backend for YouTube AI pipeline"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "openai>=2.31.0"
]

[tool.setuptools]
packages = ["api", "schemas", "services"]
